# CMakeList.txt : CMake project for UnoCPP, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("UnoCPP")

# Add source to this project's executable.
add_executable (UnoCPP "UnoCPP.cpp" "UnoCPP.h")

# TODO: Add tests and install targets if needed.
